add v4l complete example

--- a/src/lab2/Makefile
+++ b/src/lab2/Makefile
@@ -1,5 +1,5 @@
 
-all: read_mouse VideoCapture
+all: read_mouse VideoCapture v4l_example
 
 read_mouse: read_mouse.c
 	${CC} $^ -o $@
@@ -7,6 +7,8 @@ read_mouse: read_mouse.c
 VideoCapture: VideoCapture.c
 	${CC} $^ -o $@
 
+v4l_example: v4l_example.c
+	${CC} $^ -o $@
 
 clean:
-	rm -f read_mouse VideoCapture
+	rm -f read_mouse VideoCapture v4l_example
