--- a/src/lab2/Makefile
+++ b/src/lab2/Makefile
@@ -8,7 +8,7 @@ VideoCapture: VideoCapture.c
 	${CC} $^ -o $@
 
 v4l_example: v4l_example.c
-	${CC} $^ -o $@
+	${CC} $^ -o $@ -laa
 
 clean:
 	rm -f read_mouse VideoCapture v4l_example
