fix use of LDFLAGS with LDLIBS mistake

--- a/src/lab9/Makefile
+++ b/src/lab9/Makefile
@@ -9,7 +9,7 @@ PROGRAMS = prodcons \
            prodcons_4_ok \
 		   prodcons_udp
 
-LDFLAGS = -lpthread -lm
+LDLIBS = -lpthread -lm
 # CPPFLAGS = -O0 -g3
 
 all: $(PROGRAMS)
