--- a/src/lab10/Makefile
+++ b/src/lab10/Makefile
@@ -3,7 +3,8 @@ PROGRAMS = example1 \
            example2 \
 		   example3 \
 		   example4 \
-		   example5
+		   example5 \
+		   prodcons_omp
 CPPFLAGS = -fopenmp
 
 
